# project2_Kiriyan_Ivan_M25-555

./: README.md  db_meta.json  final.cast  pyproject.toml
data/: dishes.json
src/: __init__.py  decorators.py
src/primitive_db/: __init__.py  core.py  engine.py  main.py  utils.py
