[project]
name = "project2-kiriyan-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Kiriyan"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
 packages = [
     { include = "src" },
 ]


[tool.poetry.scripts]
project = "src.primitive_db.main:main"
[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
